--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
   <link href="css/style.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
+  <script type="text/javascript"> 
+    $(document).bind("mobileinit", function () {
+        // jQuery Mobile's Ajax navigation does not work in all cases (e.g.,
+        // when navigating from a mobile to a non-mobile page), especially when going back, hence disabling it.
+        $.extend($.mobile, {
+            ajaxEnabled: false
+        });
+    }); 
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!--<script src="script.js"></script>-->
   <script src="js/jquery.scrollify.js"></script>
   <script src="js/vid.js"></script>
