--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
-  <script type="text/javascript"> 
+  <!--<script type="text/javascript"> 
     $(document).bind("mobileinit", function () {
         // jQuery Mobile's Ajax navigation does not work in all cases (e.g.,
         // when navigating from a mobile to a non-mobile page), especially when going back, hence disabling it.
@@ -19,7 +19,7 @@
             ajaxEnabled: false
         });
     }); 
-  </script>
+  </script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!--<script src="script.js"></script>-->
   <script src="js/jquery.scrollify.js"></script>
@@ -101,7 +101,20 @@
     gtag('js', new Date());
     gtag('config', 'UA-114528684-1');
   </script>
-
+  <script>
+  function refreshPage() {
+  $.mobile.changePage(
+    window.location.href,
+    {
+      allowSamePageTransition : true,
+      transition              : 'none',
+      showLoadMsg             : false,
+      reloadPage              : true
+    }
+  );
+}
+</script>
+  
 </head>
 
 <body data-spy="scroll" data-target=".navbar-right">
