--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
   <script>
     $(document).ready(function() {
       var mobile = (/Android|webOS|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent));
-	  $('.bod').addClass('animated slideInLeft');
       $('html').click(function(e) {
         if (!mobile && !($(e.target).hasClass('nav-link')) && !($(e.target).hasClass('navbar-toggler')) && $('.navbar-toggler').attr('aria-expanded') == 'true') {
           $('.navbar-toggler').trigger("click");
@@ -69,6 +68,8 @@
           dark = 1;
         }
       });
+	  alert($('.bod').attr("class"));
+	  $('.bod').addClass('animated slideInLeft');
     });
   </script>
   <script>
@@ -107,7 +108,7 @@
 
 <body data-spy="scroll" data-target=".navbar-right">
   <div class="navbar-right navbar-dark navbar-expand-sm fixed-top nav1">
-    <a><img class="bod animated slideInLeft" src="https://graph.facebook.com/1618956224/picture?type=square"></a>
+    <a><img class="bod" src="https://graph.facebook.com/1618956224/picture?type=square"></a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar1">
 			<span> </span>
             <span> </span>
