--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     $(document).ready(function() {
       if ($('.navbar-toggler').is(':visible') == true) {
         $('#navbar1').removeClass('desktop').addClass('mobile');
-		$('.grid-container').css({'grid-template-columns':'100% 100% 100%','overflow':'auto'});
+		$('.grid-container').css({'grid-template-columns':'100% 100% 100%','overflow':'auto','height':'50vh','width':'90vw'});
       } else {
         $('#navbar1').removeClass('mobile').addClass('desktop');
 		$('.grid-container').css({'grid-template-columns':'40% 30% 30%','overflow':'visible'});
@@ -96,7 +96,7 @@
     $(window).resize(function() {
       if ($('.navbar-toggler').is(':visible') == true) {
         $('#navbar1').removeClass('desktop').addClass('mobile');
-		$('.grid-container').css({'grid-template-columns':'100% 100% 100%','overflow':'auto'});
+		$('.grid-container').css({'grid-template-columns':'100% 100% 100%','overflow':'auto','height':'50vh','width':'90vw'});
       } else {
         $('#navbar1').removeClass('mobile').addClass('desktop');
 		$('.grid-container').css({'grid-template-columns':'40% 30% 30%','overflow':'visible'});
