fixed mobile orientation bug #2

--- a/index.html
+++ b/index.html
@@ -78,13 +78,7 @@
   <script>
     //var mobile = (/Android|webOS|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent));
     $(document).ready(function() {
-      if ($('.navbar-toggler').is(':visible') == true) {
-        $('#navbar1').removeClass('desktop').addClass('mobile');
-		$('.grid-container').css({'grid-template-columns':'100% 100% 100%','overflow':'auto','height':'50vh','width':'90vw'});
-      } else {
-        $('#navbar1').removeClass('mobile').addClass('desktop');
-		$('.grid-container').css({'grid-template-columns':'40% 30% 30%','overflow':'visible'});
-      }
+      mobile();
 	  $(document).on("click", '.grid-item', function(){
 	  var x = $('.grid-container').scrollLeft();
 	  //$('.grid-container').scrollLeft(x+$(this).position().left-$('.grid-container').offset().left);
@@ -94,15 +88,20 @@
 	  });
     });
     $(window).resize(function() {
-      if ($('.navbar-toggler').is(':visible') == true) {
+      mobile();
+    });
+	$(window).on("orientationchange", function(event) {
+	  mobile();
+	});
+	function mobile() {
+	  if ($('.navbar-toggler').is(':visible') == true) {
         $('#navbar1').removeClass('desktop').addClass('mobile');
-		$('.grid-container').css({'grid-template-columns':'100% 100% 100%','overflow':'auto','height':'50vh','width':'90vw'});
+		$('.grid-container').css({'grid-template-columns':'100% 100% 100%','overflow':'auto'});
       } else {
         $('#navbar1').removeClass('mobile').addClass('desktop');
 		$('.grid-container').css({'grid-template-columns':'40% 30% 30%','overflow':'visible'});
       }
-    });
-	
+	}
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
