--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     $(function() {
       $.scrollify({
         section: "section",
+        interstitialSection: "footer"
       });
     });
     //}
@@ -41,10 +42,17 @@
     $(document).ready(function(){
       var swiper = new Swiper('.swiper-container', {
 		loop: true,
-		effect: 'coverflow',
+		effect: 'cube',
 		coverflowEffect: {
-          rotate: 30,
+          rotate: 60,
           slideShadows: true,
+        },
+		flipEffect: {
+          rotate: 20,
+          slideShadows: false,
+        },
+		cubeEffect: {
+          slideShadows: false,
         },
         watchSlidesProgress: true,
         watchVisibility: true,
@@ -57,7 +65,7 @@
 		autoplay: {
 		  delay: 5000,
 		}, 
- 		speed: 1500
+ 		speed: 2500
 		/*watchSlidesVisibility: true,
 		preloadImages: false,
         lazyLoading: true,
@@ -110,6 +118,7 @@
   <script>
     //var mobile = (/Android|webOS|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent));
     $(document).ready(function() {
+      $('footer').css('height',$('footer ul').outerHeight());
       mobile();
 	  /*alert('h:'+$('.grid-container').css('height'));
 	  alert('item-h:'+$('.grid-item').css('height'));
@@ -126,6 +135,7 @@
     });*/
 	var cachedWidth = $(window).width();
 	$(window).on("resize", function(event) {
+	  $('footer').css('height',$('footer ul').outerHeight());
 	  mobile();
 	  if ($("#video-view").is(':visible')) {
 		var newHeight = $(window).height() + $('#video-view').outerHeight() + $('.pad').outerHeight();
