--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <title>Jason Lam's page</title>
+  <title>Homepage of Jason</title>
   <meta charset="utf-8">
+  <meta name="description" content="A personal website of Jason built from scratch">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="shortcut icon" type="image/png" href="img/icon.png" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet" />
