change swipee style

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     $(document).ready(function(){
       var swiper = new Swiper('.swiper-container', {
 		loop: true,
-		effect: 'flip',
+		effect: 'covergflow',
 		coverflowEffect: {
           rotate: 60,
           slideShadows: true,
